[package]
name = "CSEE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-classroom1 = "*"
tokio = { version = "1.49", features = ["full"] }
hyper = "1.8.1"
hyper-rustls = "0.27"
serde = "1.0.228"
serde_json = "1.0.149"
futures = "0.3"
tera = "1"
lazy_static = "1.5.0"
oauth2 = "4.4.2"
actix-rt = "2.11.0"
actix-web = "4.12"
reqwest = { version = "0.13", features = ["blocking", "json"] }
google-drive = "0.10.0"

[[bin]]
name = "html"
path = "src/html.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "concurrent"
path = "src/concurrent.rs"
